src/objects/caesars_iot_action_temp__x.object
<CustomObject>
    <description>caesars$iot_action_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$iot_action_temp</externalName>
    <fields>
        <fullName>b_suppressed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>b_suppressed</description>
        <externalDeveloperName>b_suppressed</externalDeveloperName>
        <label>b_suppressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_delivery_mechanism__c</fullName>
        <description>c_delivery_mechanism</description>
        <externalDeveloperName>c_delivery_mechanism</externalDeveloperName>
        <label>c_delivery_mechanism</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_offer_id__c</fullName>
        <description>c_offer_id</description>
        <externalDeveloperName>c_offer_id</externalDeveloperName>
        <label>c_offer_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_suppressed_by_cd__c</fullName>
        <description>c_suppressed_by_cd</description>
        <externalDeveloperName>c_suppressed_by_cd</externalDeveloperName>
        <label>c_suppressed_by_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_suppression_comment__c</fullName>
        <description>c_suppression_comment</description>
        <externalDeveloperName>c_suppression_comment</externalDeveloperName>
        <label>c_suppression_comment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ucp_guest_id__c</fullName>
        <description>c_ucp_guest_id</description>
        <externalDeveloperName>c_ucp_guest_id</externalDeveloperName>
        <label>c_ucp_guest_id</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_created_date__c</fullName>
        <description>d_created_date</description>
        <externalDeveloperName>d_created_date</externalDeveloperName>
        <label>d_created_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$iot_action_temp</label>
    <pluralLabel>caesars$iot_action_temp</pluralLabel>
</CustomObject>